# MOOSIC

./: CMakeLists.txt  README.md  main.cpp
csv_files/: songs.csv
data/: playlists.csv  users.csv
headers/: AgeGroup.h  Album.h  App.h  Artist.h  AuthManager.h  Exceptions.h  Interfata.h  Meniu.h  MusicPlayerManager.h  Playlist.h  Premium.h  Song.h  User.h  myString.h  playlistFavorite.h  premiumUser.h  prompt.h
src/: AgeGroup.cpp  Album.cpp  App.cpp  Artist.cpp  AuthManager.cpp  Exceptions.cpp  Interfata.cpp  MusicPlayerManager.cpp  Playlist.cpp  Premium.cpp  Song.cpp  User.cpp  myString.cpp  playlistFavorite.cpp  premiumUser.cpp  prompt.cpp
